# memory-pool-allocator

./: CMakeLists.txt  README.md
benchmarks/: bench.cpp
docs/: design.md
include/: memory_pool.h  thread_safe_pool.h
src/: main.cpp
tests/: test_pool.cpp
